--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "webextension-toolbox": "latest"
   },
   "dependencies": {
-    "echarts": "^4.2.1"
+    "badges": "^1.3.0",
+    "echarts": "^4.2.1",
+    "project-package": "0.0.1"
   }
 }
