--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "webextension-toolbox": "latest"
   },
   "dependencies": {
+    "badge": "^1.0.3",
     "badges": "^1.3.0",
     "echarts": "^4.2.1",
+    "project-badge": "^0.2.0",
     "project-package": "0.0.1"
   }
 }
