--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "scripts": {
     "dev": "webextension-toolbox dev",
     "build": "webextension-toolbox build",
-    "test": "jest",
+    "test": "jest --config jestconfig.json",
     "jest-coverage": "jest --coverage"
   },
   "jest": {
     "verbose": true
   },
   "devDependencies": {
+    "codecov": "^3.3.0",
     "jest": "^24.7.1",
     "webextension-toolbox": "latest"
   },
   "dependencies": {
-    "echarts": "^4.2.1"
+    "badge": "^1.0.3",
+    "badges": "^1.3.0",
+    "echarts": "^4.2.1",
+    "project-badge": "^0.2.0",
+    "project-package": "0.0.1"
   }
 }
