Configured publish stage using curl

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,8 @@ publish:
   stage: publish
   before_script:
     - npm install
+    - apk add curl
   script:
     - npm run build chrome
-    - npm run publish
+    - "curl -H 'Authorization: Bearer $TOKEN_CHROME_STORE' -H 'x-goog-api-version: 2' -X PUT -T packages/hubcare.*.chrome.zip -v https://www.googleapis.com/upload/chromewebstore/v1.1/items/$APP_ID"
+    - "curl -H 'Authorization: Bearer $TOKEN_CHROME_STORE' -H 'x-goog-api-version: 2' -H 'Content-Length: 0' -X POST -v https://www.googleapis.com/chromewebstore/v1.1/items/$APP_ID/publish"
