--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "badge": "^1.0.3",
     "badges": "^1.3.0",
     "echarts": "^4.2.1",
+    "jquery": "^3.4.1",
     "project-badge": "^0.2.0",
     "project-package": "0.0.1",
-    "zip-folder": "^1.0.0",
-    "spin.js": "^4.0.0"
+    "spin.js": "^4.0.0",
+    "zip-folder": "^1.0.0"
   }
 }
