Use github api to request user acess token

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -47,7 +47,8 @@
         "styles/contentscript.css"
       ],
       "js": [
-        "scripts/contentscript.js"
+        "scripts/contentscript.js",
+        "scripts/oauth2.js"
       ],
       "run_at": "document_end",
       "all_frames": false
