Save token in chrome storage

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -70,6 +70,7 @@
     "tabs",
     "webRequest",
     "webRequestBlocking",
-    "https://hubcare.ml/*"
+    "https://hubcare.ml/*",
+    "storage"
   ]
 }
