--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,8 @@ publish:
   before_script:
     - npm install
     - apk add curl
+    - "sed -i \"s/CLIENT_ID: ''/CLIENT_ID: '$GITHUB_CLIENT_ID'/g\" app/scripts/constants.js"
+    - "sed -i \"s/CLIENT_SECRET: ''/CLIENT_SECRET: '$GITHUB_CLIENT_SECRET'/g\" app/scripts/constants.js"
   script:
     - npm run build chrome
     - "./node_modules/.bin/webstore upload --source packages/hubcare.v0.0.1.chrome.zip --extension-id $EXTENSION_ID --client-id $CLIENT_ID --client-secret $CLIENT_SECRET --refresh-token $REFRESH_TOKEN"
