Added the chrome_url_overrides function to manifest.json
Signed-off-by: Vitor Meireles Oliveira <vitorrr.meireles@hotmail.com>
Co-authored-by: Francisco <heronildo.2010@hotmail.com>
Co-authored-by: Vitor Alves <vitor.alves07750@outlook.com>

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -29,6 +29,8 @@
   },
   "minimum_chrome_version": "10.0",
   "devtools_page": "pages/devtools.html",
+  "chrome_url_overrides": {
+  },
   "omnibox": {
     "keyword": "hubcare"
   },
