Configure babel to jest tests

--- a/jestconfig.json
+++ b/jestconfig.json
@@ -9,6 +9,10 @@
         "!**/node_modules/**",
         "!**/vendor/**",
         "!**/dist/**",
-        "!**/coverage/**"
-    ]
+        "!**/coverage/**",
+        "!babel.config.js"
+    ],
+    "setupFiles": [
+        "jest-webextension-mock"
+      ]
   }
