Fix publish command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ publish:
     - "sed -i \"s/CLIENT_SECRET: ''/CLIENT_SECRET: '$GITHUB_CLIENT_SECRET'/g\" app/scripts/constants.js"
   script:
     - npm run build chrome
-    - "./node_modules/.bin/webstore upload --source packages/hubcare.v0.0.1.chrome.zip --extension-id $EXTENSION_ID --client-id $CLIENT_ID --client-secret $CLIENT_SECRET --refresh-token $REFRESH_TOKEN"
+    - "./node_modules/.bin/webstore upload --source packages/hubcare.*.chrome.zip --extension-id $EXTENSION_ID --client-id $CLIENT_ID --client-secret $CLIENT_SECRET --refresh-token $REFRESH_TOKEN"
     - "./node_modules/.bin/webstore publish --extension-id $EXTENSION_ID --client-id $CLIENT_ID --client-secret $CLIENT_SECRET --refresh-token $REFRESH_TOKEN"
   only:
     - master
