Add image SVG to tooltip and change the SPAN position Use tag img for SVG image Add img SVG in manifest
Signed-off-by: brian2397 <brianlui2387@gmail.com>
Co-authored-by:  Francisco Heronildo <heronildo.2010@hotmail.com>
Co-authored-by:  cjj castro <cjj.castro3@gmail.com>

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -72,5 +72,8 @@
     "webRequestBlocking",
     "https://hubcare.ml/*",
     "storage"
+  ],
+  "web_accessible_resources": [
+    "images/questionMark.svg"
   ]
 }
